--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 serde_json = "1.0.97"
 serde_yaml = "0.9.21"
+toml = "0.7.4"
 
 [profile.release]
 opt-level = 'z'  # Optimize for size.
