--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde-xml-rs = "0.6.0"
 serde_json = "1.0.97"
 serde_yaml = "0.9.21"
 toml = "0.7.4"
