--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,7 @@ permissions:
   contents: write
 on:
   push:
-    tags:
-      - [0-9]+.*
+    tags: '[0-9]+.*'
 jobs:
   create-release:
     runs-on: ubuntu-latest
