--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,9 +55,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: sudo apt-get -y musl-dev musl-tools
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: 1.70.0
+          target: x86_64-unknown-linux-musl
           override: true
       - uses: actions/cache@v3
         with:
