--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: sudo apt-get -y musl-dev musl-tools
+      - run: sudo apt-get install -y musl-dev musl-tools
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: 1.70.0
