--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ serde-xml-rs = "0.6.0"
 serde_json = "1.0.99"
 serde_yaml = "0.9.22"
 toml = "0.7.5"
+yaml-split = "0.4.0"
 
 [profile.release]
 opt-level = 'z'  # Optimize for size.
