--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,11 +56,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: sudo apt-get install -y musl-dev musl-tools
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.70.0
-          target: x86_64-unknown-linux-musl
-          override: true
+      - run: |
+          rustup toolchain install 1.70.0-x86_64-unknown-linux-musl --profile minimal --no-self-update
+          rustup default 1.70.0-x86_64-unknown-linux-musl
       - uses: actions/cache@v3
         with:
           path: ~/.cargo/registry
@@ -69,17 +67,9 @@ jobs:
         with:
           path: target
           key: ${{ runner.os }}-cargo-rpm-build-target-${{ hashFiles('**/Cargo.lock') }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: cargo-generate-rpm
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --target x86_64-unknown-linux-musl
-      - uses: actions-rs/cargo@v1
-        with:
-          command: generate-rpm
+      - run: cargo install cargo-generate-rpm
+      - run: cargo build --release --target x86_64-unknown-linux-musl
+      - run: cargo generate-rpm
       - uses: Roang-zero1/github-upload-release-artifacts-action@v3
         with:
           args: "target/generate-rpm/"
