--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,11 +67,12 @@ jobs:
         with:
           path: target
           key: ${{ runner.os }}-cargo-rpm-build-target-${{ hashFiles('**/Cargo.lock') }}
-      - run: cargo install cargo-generate-rpm
+      - run: cargo install cargo-deb cargo-generate-rpm
       - run: cargo build --release --target x86_64-unknown-linux-musl
+      - run: cargo deb --target x86_64-unknown-linux-musl
       - run: cargo generate-rpm
       - uses: Roang-zero1/github-upload-release-artifacts-action@v3
         with:
-          args: "target/generate-rpm/"
+          args: "target/generate-rpm/ target/x86_64-unknown-linux-musl/debian/"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
