--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "convert2json"
 description = "CLI utilities to convert CSV, TOML, XML & YAML into JSON and for use with jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "0.4.4"
+version = "0.4.5"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
@@ -33,7 +33,7 @@ yq = []
 argh = "0.1.10"
 csv = "1.2.2"
 is-terminal = "0.4.9"
-serde = { version = "1.0.179", features = ["serde_derive"] }
+serde = { version = "1.0.180", features = ["serde_derive"] }
 serde-xml-rs = "0.6.0"
 serde_json = "1.0.104"
 serde_yaml = "0.9.25"
@@ -45,6 +45,27 @@ opt-level = 'z'  # Optimize for size.
 lto = true
 codegen-units = 1
 strip = true
+
+[package.metadata.deb]
+maintainer = "Simon Rupf <simon@rupf.net>"
+license-file = ["LICENSE-MIT", "0"]
+extended-description-file = "README.md"
+depends = "jq"
+section = "contrib/utils"
+priority = "optional"
+assets = [
+    ["target/x86_64-unknown-linux-musl/release/csv2json", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/cq", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/toml2json", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/tq", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/xml2json", "usr/bin/xml2json", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/xq", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/yaml2json", "usr/bin/yaml2json", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/yq", "usr/bin/", "755" ],
+    ["CHANGELOG.md", "usr/share/doc/convert2json/", "644" ],
+    ["LICENSE.md", "usr/share/doc/convert2json/", "644" ],
+    ["README.md", "usr/share/doc/convert2json/", "644" ],
+]
 
 [package.metadata.generate-rpm]
 assets = [
