--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "convert2json"
 description = "CLI utilities to convert CSV, TOML, XML & YAML into JSON and for use with jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "0.5.0"
+version = "0.5.1"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
@@ -12,6 +12,17 @@ rust-version = "1.65"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+argh = { version = "0.1.12", optional = true }
+csv = { version = "1.2.2", optional = true }
+is-terminal = "0.4.9"
+serde = { version = "1.0.188", features = ["serde_derive"] }
+serde-xml-rs = { version = "0.6.0", optional = true }
+serde_json = "1.0.107"
+serde_yaml = { version = "0.9.25", optional = true }
+toml = { version = "0.8.1", optional = true }
+yaml-split = { version = "0.4.0", optional = true }
+
 [features]
 default = ["csv", "toml", "xml", "yaml"]
 jq = ["cq", "tq", "xq", "yq"]
@@ -20,25 +31,14 @@ csv = ["csv2json", "cq"]
 toml = ["toml2json", "tq"]
 xml = ["xml2json", "xq"]
 yaml = ["yaml2json", "yq"]
-csv2json = []
-cq = []
-toml2json = []
-tq = []
-xml2json = []
-xq = []
-yaml2json = []
-yq = []
-
-[dependencies]
-argh = "0.1.12"
-csv = "1.2.2"
-is-terminal = "0.4.9"
-serde = { version = "1.0.188", features = ["serde_derive"] }
-serde-xml-rs = "0.6.0"
-serde_json = "1.0.107"
-serde_yaml = "0.9.25"
-toml = "0.8.1"
-yaml-split = "0.4.0"
+csv2json = ["dep:argh", "dep:csv"]
+cq = ["dep:argh", "dep:csv"]
+toml2json = ["dep:toml"]
+tq = ["dep:toml"]
+xml2json = ["dep:serde-xml-rs"]
+xq = ["dep:serde-xml-rs"]
+yaml2json = ["dep:serde_yaml", "dep:yaml-split"]
+yq = ["dep:serde_yaml", "dep:yaml-split"]
 
 [profile.release]
 opt-level = 'z'  # Optimize for size.
