--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,13 @@
 name = "convert2json"
 description = "CLI utilities to convert CSV, TOML, XML & YAML into JSON and for use with jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "0.5.2"
+version = "0.5.3"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
 keywords = ["cli", "json", "toml", "xml", "yaml"]
 categories = ["command-line-utilities", "development-tools", "encoding"]
-rust-version = "1.65"
+rust-version = "1.66"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -20,7 +20,9 @@ serde = { version = "1.0.192", features = ["serde_derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
 serde_json = "1.0.108"
 serde_yaml = { version = "0.9.27", optional = true }
-toml = { version = "0.8.2", optional = true }
+# toml 0.8.2 is the last version compatible to rust 1.66, drop the pinning when
+# raising this projects minimum rust version
+toml = { version = "= 0.8.2", optional = true }
 yaml-split = { version = "0.4.0", optional = true }
 
 [features]
