--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "convert2json"
 description = "CLI utilities to convert CSV, TOML, XML & YAML into JSON and for use with jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "0.6.0"
+version = "0.6.1"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
@@ -45,8 +45,8 @@ name = "yq"
 required-features = ["yq"]
 
 [dependencies]
-argh = { version = "0.1.12", optional = true }
 csv = { version = "1.3.0", optional = true }
+pico-args = { version = "0.5.0", features = ["short-space-opt"], optional = true }
 serde = { version = "1.0.195", features = ["serde_derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
 serde_json = "1.0.111"
@@ -62,8 +62,8 @@ csv = ["csv2json", "cq"]
 toml = ["toml2json", "tq"]
 xml = ["xml2json", "xq"]
 yaml = ["yaml2json", "yq"]
-csv2json = ["dep:argh", "dep:csv"]
-cq = ["dep:argh", "dep:csv"]
+csv2json = ["dep:pico-args", "dep:csv"]
+cq = ["dep:pico-args", "dep:csv"]
 toml2json = ["dep:toml"]
 tq = ["dep:toml"]
 xml2json = ["dep:serde-xml-rs"]
