--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,23 +6,25 @@ on:
   push:
     branches: '*'
   pull_request:
+env:
+  RUST_VERSION: 1.70.0
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Install Rust
       run: |
-        rustup toolchain install 1.70.0 --profile minimal --no-self-update --component rustfmt clippy
-        rustup default 1.70.0
+        rustup toolchain install ${RUST_VERSION} --profile minimal --no-self-update --component rustfmt clippy
+        rustup default ${RUST_VERSION}
     - name: Cache cargo registry
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cargo/registry
         key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
     - name: Cache cargo build
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: target
         key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
