--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "convert2json"
-description = "CLI utilities to convert CSV, TOML, XML & YAML into JSON and for use with jq."
+description = "CLI utilities to convert CSV, INI, TOML, XML & YAML into JSON and for use with jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "0.6.2"
+version = "0.7.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
-keywords = ["cli", "json", "toml", "xml", "yaml"]
+keywords = ["cli", "csv", "ini", "json", "toml", "xml", "yaml"]
 categories = ["command-line-utilities", "development-tools", "encoding"]
 rust-version = "1.70"
 
@@ -19,6 +19,14 @@ required-features = ["csv2json"]
 [[bin]]
 name = "cq"
 required-features = ["cq"]
+
+[[bin]]
+name = "ini2json"
+required-features = ["ini2json"]
+
+[[bin]]
+name = "iq"
+required-features = ["iq"]
 
 [[bin]]
 name = "toml2json"
@@ -49,21 +57,25 @@ csv = { version = "1.3.0", optional = true }
 pico-args = { version = "0.5.0", features = ["short-space-opt"], optional = true }
 serde = { version = "1.0.195", features = ["serde_derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
+serde_ini = { version = "0.2.0", optional = true }
 serde_json = "1.0.111"
 serde_yaml = { version = "0.9.30", optional = true }
 toml = { version = "0.8.8", optional = true }
 yaml-split = { version = "0.4.0", optional = true }
 
 [features]
-default = ["csv", "toml", "xml", "yaml"]
+default = ["csv", "ini", "toml", "xml", "yaml"]
 jq = ["cq", "tq", "xq", "yq"]
 to_json = ["csv2json", "toml2json", "xml2json", "yaml2json"]
 csv = ["csv2json", "cq"]
+ini = ["ini2json", "iq"]
 toml = ["toml2json", "tq"]
 xml = ["xml2json", "xq"]
 yaml = ["yaml2json", "yq"]
 csv2json = ["dep:pico-args", "dep:csv"]
 cq = ["dep:pico-args", "dep:csv"]
+ini2json = ["dep:serde_ini"]
+iq = ["dep:serde_ini"]
 toml2json = ["dep:toml"]
 tq = ["dep:toml"]
 xml2json = ["dep:serde-xml-rs"]
@@ -87,6 +99,8 @@ priority = "optional"
 assets = [
     ["target/x86_64-unknown-linux-musl/release/csv2json", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/cq", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/ini2json", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/iq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/toml2json", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/tq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/xml2json", "usr/bin/xml2json", "755" ],
@@ -102,6 +116,8 @@ assets = [
 assets = [
     { source = "target/x86_64-unknown-linux-musl/release/csv2json", dest = "/usr/bin/csv2json", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/cq", dest = "/usr/bin/cq", mode = "755" },
+    { source = "target/x86_64-unknown-linux-musl/release/ini2json", dest = "/usr/bin/ini2json", mode = "755" },
+    { source = "target/x86_64-unknown-linux-musl/release/iq", dest = "/usr/bin/iq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/toml2json", dest = "/usr/bin/toml2json", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/tq", dest = "/usr/bin/tq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/xml2json", dest = "/usr/bin/xml2json", mode = "755" },
