--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "convert2json"
 description = "CLI utilities to convert CSV, INI, TOML, XML & YAML into JSON and for use with jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "0.7.2"
+version = "0.8.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
@@ -55,8 +55,8 @@ required-features = ["yq"]
 [dependencies]
 csv = { version = "1.3.0", optional = true }
 pico-args = { version = "0.5.0", features = ["short-space-opt"], optional = true }
+quick-xml = { version = "0.31.0", features = ["serialize"], optional = true }
 serde = { version = "1.0.197", features = ["serde_derive"] }
-serde-xml-rs = { version = "0.6.0", optional = true }
 serde_ini = { version = "0.2.0", optional = true }
 serde_json = "1.0.114"
 serde_yaml = { version = "0.9.32", optional = true }
@@ -78,8 +78,8 @@ ini2json = ["dep:serde_ini"]
 iq = ["dep:serde_ini"]
 toml2json = ["dep:toml"]
 tq = ["dep:toml"]
-xml2json = ["dep:serde-xml-rs"]
-xq = ["dep:serde-xml-rs"]
+xml2json = ["dep:quick-xml"]
+xq = ["dep:quick-xml"]
 yaml2json = ["dep:serde_yaml", "dep:yaml-split"]
 yq = ["dep:serde_yaml", "dep:yaml-split"]
 
