--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "convert2json"
 description = "CLI utilities to convert CSV, INI, TOML, XML & YAML into JSON and for use with jaq or jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "0.8.5"
+version = "0.9.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
@@ -27,6 +27,14 @@ required-features = ["ini2json"]
 [[bin]]
 name = "iq"
 required-features = ["iq"]
+
+[[bin]]
+name = "rsv2json"
+required-features = ["rsv2json"]
+
+[[bin]]
+name = "rq"
+required-features = ["rq"]
 
 [[bin]]
 name = "toml2json"
@@ -55,6 +63,7 @@ required-features = ["yq"]
 [dependencies]
 csv = { version = "1.3.0", optional = true }
 pico-args = { version = "0.5.0", features = ["short-space-opt"], optional = true }
+rsv-core = { version = "0.0.3", optional = true }
 serde = { version = "1.0.201", features = ["serde_derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
 serde_ini = { version = "0.2.0", optional = true }
@@ -64,11 +73,12 @@ toml = { version = "0.8.8", optional = true }
 yaml-split = { version = "0.4.0", optional = true }
 
 [features]
-default = ["csv", "ini", "toml", "xml", "yaml"]
-jq = ["cq", "tq", "xq", "yq"]
-to_json = ["csv2json", "toml2json", "xml2json", "yaml2json"]
+default = ["csv", "ini", "rsv", "toml", "xml", "yaml"]
+jq = ["cq", "rq", "tq", "xq", "yq"]
+to_json = ["csv2json", "rsv2json", "toml2json", "xml2json", "yaml2json"]
 csv = ["csv2json", "cq"]
 ini = ["ini2json", "iq"]
+rsv = ["rsv2json", "rq"]
 toml = ["toml2json", "tq"]
 xml = ["xml2json", "xq"]
 yaml = ["yaml2json", "yq"]
@@ -76,6 +86,8 @@ csv2json = ["dep:pico-args", "dep:csv"]
 cq = ["dep:pico-args", "dep:csv"]
 ini2json = ["dep:serde_ini"]
 iq = ["dep:serde_ini"]
+rsv2json = ["dep:rsv-core"]
+rq = ["dep:rsv-core"]
 toml2json = ["dep:toml"]
 tq = ["dep:toml"]
 xml2json = ["dep:serde-xml-rs"]
