--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "convert2json"
-description = "CLI utilities to convert CSV, INI, TOML, XML & YAML into JSON and for use with jaq or jq."
+description = "CLI utilities to convert CSV, INI, RSV, TOML, XML & YAML into JSON and for use with jaq or jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
 version = "0.9.0"
 edition = "2021"
@@ -63,7 +63,7 @@ required-features = ["yq"]
 [dependencies]
 csv = { version = "1.3.0", optional = true }
 pico-args = { version = "0.5.0", features = ["short-space-opt"], optional = true }
-rsv-core = { version = "0.0.3", optional = true }
+rsv-core = { version = "0.0.4", optional = true }
 serde = { version = "1.0.201", features = ["serde_derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
 serde_ini = { version = "0.2.0", optional = true }
