--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,8 @@ assets = [
     ["target/x86_64-unknown-linux-musl/release/cq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/ini2json", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/iq", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/rsv2json", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/rq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/toml2json", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/tq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/xml2json", "usr/bin/xml2json", "755" ],
@@ -130,6 +132,8 @@ assets = [
     { source = "target/x86_64-unknown-linux-musl/release/cq", dest = "/usr/bin/cq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/ini2json", dest = "/usr/bin/ini2json", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/iq", dest = "/usr/bin/iq", mode = "755" },
+    { source = "target/x86_64-unknown-linux-musl/release/rsv2json", dest = "/usr/bin/csv2json", mode = "755" },
+    { source = "target/x86_64-unknown-linux-musl/release/rq", dest = "/usr/bin/cq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/toml2json", dest = "/usr/bin/toml2json", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/tq", dest = "/usr/bin/tq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/xml2json", dest = "/usr/bin/xml2json", mode = "755" },
