--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
-          bin: csv2json,cq,ini2json,iq,toml2json,tq,xml2json,xq,yaml2json,yq
+          bin: csv2json,cq,ini2json,iq,rsv2json,rq,toml2json,tq,xml2json,xq,yaml2json,yq
           archive: convert2json-$target
           include: CHANGELOG.md,LICENSE.md,README.md
           target: ${{ matrix.target }}
