--- a/about.toml
+++ b/about.toml
@@ -2,7 +2,7 @@ accepted = [
     "Apache-2.0",
     "BSD-3-Clause",
     "MIT",
-    "Unicode-DFS-2016",
+    "Unicode-3.0",
 ]
 
 no-clearly-defined = true
