--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ serde_json = "1.0.140"
 serde_yaml = { version = "0.9.34", optional = true }
 toml = { version = "0.8.8", optional = true }
 yaml-split = { version = "0.4.0", optional = true }
+xmltojson = { path = "../xmltojson", optional = true }
 
 [features]
 default = ["csv", "ini", "rsv", "toml", "xml", "yaml"]
@@ -90,8 +91,8 @@ rsv2json = ["dep:rsv-core"]
 rq = ["dep:rsv-core"]
 toml2json = ["dep:toml"]
 tq = ["dep:toml"]
-xml2json = ["dep:quick-xml"]
-xq = ["dep:quick-xml"]
+xml2json = ["dep:quick-xml", "dep:xmltojson"]
+xq = ["dep:quick-xml", "dep:xmltojson"]
 yaml2json = ["dep:serde_yaml", "dep:yaml-split"]
 yq = ["dep:serde_yaml", "dep:yaml-split"]
 
