--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "convert2json"
 description = "CLI utilities to convert CSV, INI, RSV, TOML, XML & YAML into JSON and for use with jaq or jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "1.1.6"
+version = "2.0.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
@@ -71,7 +71,7 @@ serde_json = "1.0.140"
 serde_yaml = { version = "0.9.34", optional = true }
 toml = { version = "0.8.8", optional = true }
 yaml-split = { version = "0.4.0", optional = true }
-xmltojson = { path = "../xmltojson", optional = true }
+xmltojson = { version = "0.2.0", optional = true }
 
 [features]
 default = ["csv", "ini", "rsv", "toml", "xml", "yaml"]
