--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,7 +76,7 @@ quick-xml = { version = "0.37.4", features = ["serialize"], optional = true }
 rsv-core = { version = "0.0.4", optional = true }
 serde = { version = "1.0.219", features = ["serde_derive"] }
 serde_ini = { version = "0.2.0", optional = true }
-serde_json = "1.0.140"
+serde_json = { version = "1.0.140", features = ["preserve_order"] }
 serde_yaml = { version = "0.9.34", optional = true }
 toml = { version = "0.8.8", optional = true }
 yaml-split = { version = "0.4.0", optional = true }
