--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "convert2json"
-description = "CLI utilities to convert CBOR, CSV, INI, RSV, TOML, XML & YAML into JSON and for use with jaq or jq."
+description = "CLI utilities to convert CBOR, CSV, INI, MessagePack, RSV, TOML, XML & YAML into JSON and for use with jaq or jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
 version = "2.2.0"
 edition = "2021"
@@ -35,6 +35,14 @@ required-features = ["ini2json"]
 [[bin]]
 name = "iq"
 required-features = ["iq"]
+
+[[bin]]
+name = "msg2json"
+required-features = ["msg2json"]
+
+[[bin]]
+name = "msgq"
+required-features = ["msgq"]
 
 [[bin]]
 name = "rsv2json"
@@ -73,6 +81,7 @@ ciborium = { version = "0.2.2", optional = true }
 csv = { version = "1.3.1", optional = true }
 pico-args = { version = "0.5.0", features = ["short-space-opt"], optional = true }
 quick-xml = { version = "0.37.4", features = ["serialize"], optional = true }
+rmp-serde = { version = "1.3.0", optional = true }
 rsv-core = { version = "0.0.4", optional = true }
 serde = { version = "1.0.219", features = ["serde_derive"] }
 serde_ini = { version = "0.2.0", optional = true }
@@ -82,12 +91,13 @@ toml = { version = "0.8.8", optional = true }
 yaml-split = { version = "0.4.0", optional = true }
 
 [features]
-default = ["cbor", "csv", "ini", "rsv", "toml", "xml", "yaml"]
-jq = ["cborq", "cq", "rq", "tq", "xq", "yq"]
-to_json = ["cbor2json", "csv2json", "rsv2json", "toml2json", "xml2json", "yaml2json"]
+default = ["cbor", "csv", "ini", "messagepack", "rsv", "toml", "xml", "yaml"]
+jq = ["cborq", "cq", "iq", "msgq", "rq", "tq", "xq", "yq"]
+to_json = ["cbor2json", "csv2json", "ini2json", "msg2json", "rsv2json", "toml2json", "xml2json", "yaml2json"]
 cbor = ["cbor2json", "cborq"]
 csv = ["csv2json", "cq"]
 ini = ["ini2json", "iq"]
+messagepack = ["msg2json", "msgq"]
 rsv = ["rsv2json", "rq"]
 toml = ["toml2json", "tq"]
 xml = ["xml2json", "xq"]
@@ -98,6 +108,8 @@ csv2json = ["dep:pico-args", "dep:csv"]
 cq = ["dep:pico-args", "dep:csv"]
 ini2json = ["dep:serde_ini"]
 iq = ["dep:serde_ini"]
+msg2json = ["dep:rmp-serde"]
+msgq = ["dep:rmp-serde"]
 rsv2json = ["dep:rsv-core"]
 rq = ["dep:rsv-core"]
 toml2json = ["dep:toml"]
@@ -121,10 +133,14 @@ depends = "jq"
 section = "contrib/utils"
 priority = "optional"
 assets = [
+    ["target/x86_64-unknown-linux-musl/release/cbor2json", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/cborq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/csv2json", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/cq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/ini2json", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/iq", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/msg2json", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/msgq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/rsv2json", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/rq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/toml2json", "usr/bin/", "755" ],
@@ -140,10 +156,14 @@ assets = [
 
 [package.metadata.generate-rpm]
 assets = [
+    { source = "target/x86_64-unknown-linux-musl/release/cbor2json", dest = "/usr/bin/cbor2json", mode = "755" },
+    { source = "target/x86_64-unknown-linux-musl/release/cborq", dest = "/usr/bin/cborq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/csv2json", dest = "/usr/bin/csv2json", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/cq", dest = "/usr/bin/cq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/ini2json", dest = "/usr/bin/ini2json", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/iq", dest = "/usr/bin/iq", mode = "755" },
+    { source = "target/x86_64-unknown-linux-musl/release/msg2json", dest = "/usr/bin/msg2json", mode = "755" },
+    { source = "target/x86_64-unknown-linux-musl/release/msgq", dest = "/usr/bin/msgq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/rsv2json", dest = "/usr/bin/csv2json", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/rq", dest = "/usr/bin/cq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/toml2json", dest = "/usr/bin/toml2json", mode = "755" },
