--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "convert2json"
-description = "CLI utilities to convert CBOR, CSV, INI, MessagePack, Plist, RSV, TOML, XML & YAML into JSON and for use with jaq or jq."
+description = "CLI utilities to convert BSON, CBOR, CSV, INI, MessagePack, Plist, RSV, TOML, XML & YAML into JSON and for use with jaq or jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
 version = "2.2.0"
 edition = "2021"
@@ -11,6 +11,14 @@ categories = ["command-line-utilities", "development-tools", "encoding"]
 rust-version = "1.74"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]]
+name = "bson2json"
+required-features = ["bson2json"]
+
+[[bin]]
+name = "bsonq"
+required-features = ["bsonq"]
 
 [[bin]]
 name = "cbor2json"
@@ -85,6 +93,7 @@ name = "yq"
 required-features = ["yq"]
 
 [dependencies]
+bson = { version = "2.13.0", optional = true }
 ciborium = { version = "0.2.2", optional = true }
 csv = { version = "1.3.1", optional = true }
 pico-args = { version = "0.5.0", features = ["short-space-opt"], optional = true }
@@ -96,13 +105,14 @@ serde = { version = "1.0.219", features = ["serde_derive"] }
 serde_ini = { version = "0.2.0", optional = true }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 serde_yaml = { version = "0.9.34", optional = true }
-toml = { version = "0.8.8", optional = true }
+toml = { version = "0.8.21", optional = true }
 yaml-split = { version = "0.4.0", optional = true }
 
 [features]
-default = ["cbor", "csv", "ini", "messagepack", "plist", "rsv", "toml", "xml", "yaml"]
-jq = ["cborq", "cq", "iq", "msgq", "plistq", "rq", "tq", "xq", "yq"]
-to_json = ["cbor2json", "csv2json", "ini2json", "msg2json", "plist2json", "rsv2json", "toml2json", "xml2json", "yaml2json"]
+default = ["bson", "cbor", "csv", "ini", "messagepack", "plist", "rsv", "toml", "xml", "yaml"]
+jq = ["bsonq", "cborq", "cq", "iq", "msgq", "plistq", "rq", "tq", "xq", "yq"]
+to_json = ["bson2json", "cbor2json", "csv2json", "ini2json", "msg2json", "plist2json", "rsv2json", "toml2json", "xml2json", "yaml2json"]
+bson = ["bson2json", "bsonq"]
 cbor = ["cbor2json", "cborq"]
 csv = ["csv2json", "cq"]
 ini = ["ini2json", "iq"]
@@ -112,6 +122,8 @@ rsv = ["rsv2json", "rq"]
 toml = ["toml2json", "tq"]
 xml = ["xml2json", "xq"]
 yaml = ["yaml2json", "yq"]
+bson2json = ["dep:bson"]
+bsonq = ["dep:bson"]
 cbor2json = ["dep:ciborium"]
 cborq = ["dep:ciborium"]
 csv2json = ["dep:pico-args", "dep:csv"]
@@ -145,6 +157,8 @@ depends = "jq"
 section = "contrib/utils"
 priority = "optional"
 assets = [
+    ["target/x86_64-unknown-linux-musl/release/bson2json", "usr/bin/", "755" ],
+    ["target/x86_64-unknown-linux-musl/release/bsonq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/cbor2json", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/cborq", "usr/bin/", "755" ],
     ["target/x86_64-unknown-linux-musl/release/csv2json", "usr/bin/", "755" ],
@@ -170,6 +184,8 @@ assets = [
 
 [package.metadata.generate-rpm]
 assets = [
+    { source = "target/x86_64-unknown-linux-musl/release/bson2json", dest = "/usr/bin/bson2json", mode = "755" },
+    { source = "target/x86_64-unknown-linux-musl/release/bsonq", dest = "/usr/bin/bsonq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/cbor2json", dest = "/usr/bin/cbor2json", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/cborq", dest = "/usr/bin/cborq", mode = "755" },
     { source = "target/x86_64-unknown-linux-musl/release/csv2json", dest = "/usr/bin/csv2json", mode = "755" },
