--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "convert2json"
 description = "CLI utilities to convert BSON, CBOR, CSV, INI, MessagePack, Plist, RSV, TOML, XML & YAML into JSON and for use with jaq or jq."
 authors = ["Simon Rupf <simon@rupf.net>"]
-version = "2.2.5"
+version = "2.3.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/simonrupf/convert2json"
@@ -97,7 +97,7 @@ bson = { version = "2.15.0", features = ["uncapped_max_size"], optional = true }
 ciborium = { version = "0.2.2", optional = true }
 csv = { version = "1.3.1", optional = true }
 pico-args = { version = "0.5.0", features = ["short-space-opt"], optional = true }
-plist = { version = "1.7.2", optional = true }
+plist = { version = "1.7.4", optional = true }
 quick-xml = { version = "0.38.0", features = ["serialize"], optional = true }
 rmp-serde = { version = "1.3.0", optional = true }
 rsv-core = { version = "0.0.4", optional = true }
@@ -105,7 +105,7 @@ serde = { version = "1.0.219", features = ["serde_derive"] }
 serde_ini = { version = "0.2.0", optional = true }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 serde_yaml = { version = "0.9.34", optional = true }
-toml = { version = "0.8.21", default-features = false, features = ["parse"], optional = true }
+toml = { version = "0.9.0", default-features = false, features = ["parse", "preserve_order", "serde", "std"], optional = true }
 yaml-split = { version = "0.4.0", optional = true }
 
 [features]
