fix deb packaging, due to upgrade of cargo-deb to 3.2.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -156,26 +156,26 @@ depends = "jq"
 section = "contrib/utils"
 priority = "optional"
 assets = [
-    ["target/x86_64-unknown-linux-musl/release/bson2json", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/bsonq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/cbor2json", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/cborq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/csv2json", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/cq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/ini2json", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/iq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/msg2json", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/msgq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/plist2json", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/plistq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/rsv2json", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/rq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/toml2json", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/tq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/xml2json", "usr/bin/xml2json", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/xq", "usr/bin/", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/yaml2json", "usr/bin/yaml2json", "755" ],
-    ["target/x86_64-unknown-linux-musl/release/yq", "usr/bin/", "755" ],
+    ["target/release/bson2json", "usr/bin/", "755" ],
+    ["target/release/bsonq", "usr/bin/", "755" ],
+    ["target/release/cbor2json", "usr/bin/", "755" ],
+    ["target/release/cborq", "usr/bin/", "755" ],
+    ["target/release/csv2json", "usr/bin/", "755" ],
+    ["target/release/cq", "usr/bin/", "755" ],
+    ["target/release/ini2json", "usr/bin/", "755" ],
+    ["target/release/iq", "usr/bin/", "755" ],
+    ["target/release/msg2json", "usr/bin/", "755" ],
+    ["target/release/msgq", "usr/bin/", "755" ],
+    ["target/release/plist2json", "usr/bin/", "755" ],
+    ["target/release/plistq", "usr/bin/", "755" ],
+    ["target/release/rsv2json", "usr/bin/", "755" ],
+    ["target/release/rq", "usr/bin/", "755" ],
+    ["target/release/toml2json", "usr/bin/", "755" ],
+    ["target/release/tq", "usr/bin/", "755" ],
+    ["target/release/xml2json", "usr/bin/xml2json", "755" ],
+    ["target/release/xq", "usr/bin/", "755" ],
+    ["target/release/yaml2json", "usr/bin/yaml2json", "755" ],
+    ["target/release/yq", "usr/bin/", "755" ],
     ["CHANGELOG.md", "usr/share/doc/convert2json/", "644" ],
     ["LICENSE.md", "usr/share/doc/convert2json/", "644" ],
     ["README.md", "usr/share/doc/convert2json/", "644" ],
