--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,9 +104,8 @@ rsv-core = { version = "0.0.4", optional = true }
 serde = { version = "1.0.228", features = ["serde_derive"] }
 serde_ini = { version = "0.2.0", optional = true }
 serde_json = { version = "1.0.145", features = ["preserve_order"] }
-serde_yaml = { version = "0.9.34", optional = true }
+serde-saphyr = { version = "0.0.7", optional = true }
 toml = { version = "0.9.2", default-features = false, features = ["parse", "preserve_order", "serde", "std"], optional = true }
-yaml-split = { version = "0.4.0", optional = true }
 
 [features]
 default = ["bson", "cbor", "csv", "ini", "messagepack", "plist", "rsv", "toml", "xml", "yaml"]
@@ -140,8 +139,8 @@ toml2json = ["dep:toml"]
 tq = ["dep:toml"]
 xml2json = ["dep:quick-xml"]
 xq = ["dep:quick-xml"]
-yaml2json = ["dep:serde_yaml", "dep:yaml-split"]
-yq = ["dep:serde_yaml", "dep:yaml-split"]
+yaml2json = ["dep:serde-saphyr"]
+yq = ["dep:serde-saphyr"]
 
 [profile.release]
 lto = true
